--- a/src/pages/styles/socios.css
+++ b/src/pages/styles/socios.css
@@ -1,8 +1,6 @@
 .iconos {
-  display: inline-block;
-  position: relative;
-  top: -1rem;
-  margin-left: 0.5rem;
+  margin: 0;
+  font-size: 0.8rem;
 }
 .tablaUsuarios {
   background: rgba(111, 162, 114, 0.534);
@@ -10,4 +8,7 @@
 #tablaUsuarios {
   margin-top: 2rem;
   background: rgba(143, 115, 49, 0.253);
+}
+.addModal {
+  margin-left: 1rem;
 }
