--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,3 @@
-html,
-body {
-  background: url("./images/weed.png");
-  background-size: 105% auto;
-  background-repeat: no-repeat;
-}
 .invalid-feedback {
   color: rgb(218, 98, 18);
 }
@@ -31,14 +25,6 @@ a {
   background-color: rgb(174, 119, 199);
 }
 
-#tablePrincipal {
-  max-width: 90%;
-  max-height: 50vh;
-  background: #7d4c2234;
-  overflow-y: scroll;
-  scrollbar-color: #388e3c white;
-  scrollbar-width: thin;
-}
 #tablePrincipal::-webkit-scrollbar-track {
   -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
   background-color: #f5f5f5;
@@ -80,4 +66,7 @@ a {
 .floatRight {
   float: right;
   color: rgb(255, 72, 0);
+}
+.loading {
+  opacity: 0.3;
 }
