--- a/src/pages/styles/login.css
+++ b/src/pages/styles/login.css
@@ -22,3 +22,9 @@ h4,
 h6 {
   font-family: "Exo 2", sans-serif !important;
 }
+#login {
+  height: 100vh;
+  background: url("../../images/orange.jpg");
+  background-size: cover cover;
+  background-repeat: no-repeat;
+}
